--- a/YourWalker/CountDisplayViewController.storyboard
+++ b/YourWalker/CountDisplayViewController.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cYR-yX-XhG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6221" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cYR-yX-XhG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
     </dependencies>
     <scenes>
         <!--Count Display View Controller-->
@@ -41,16 +41,24 @@
                                     <constraint firstAttribute="bottom" secondItem="1aZ-eO-7S8" secondAttribute="bottom" id="s12-rV-2hX"/>
                                 </constraints>
                             </view>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="MOZ-Dp-eoC">
+                                <rect key="frame" x="282" y="282" width="37" height="37"/>
+                                <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="centerX" secondItem="MOZ-Dp-eoC" secondAttribute="centerX" id="OmW-SK-K73"/>
+                            <constraint firstAttribute="centerY" secondItem="MOZ-Dp-eoC" secondAttribute="centerY" id="RP6-On-hXC"/>
                             <constraint firstAttribute="centerX" secondItem="1n1-Jh-rYS" secondAttribute="centerX" id="glU-c7-Y0I"/>
                             <constraint firstAttribute="centerY" secondItem="1n1-Jh-rYS" secondAttribute="centerY" id="zkA-Zh-lfF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3rN-r3-Fz8"/>
                     <connections>
+                        <outlet property="stepCountDescriptionLabel" destination="1aZ-eO-7S8" id="08d-sX-Lpe"/>
                         <outlet property="stepCountLabel" destination="JOu-LL-ipf" id="mAB-Mc-gb7"/>
+                        <outlet property="stepCountLoadingActivityIndicator" destination="MOZ-Dp-eoC" id="tVZ-fS-xMu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="96R-Df-S3C" userLabel="First Responder" sceneMemberID="firstResponder"/>
